Add login form & reducers

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -5,5 +5,9 @@
         "title": "Make a statement!",
         "description": "About a book",
         "bookAdvice": "choose a book"
+    },
+    "loginForm": {
+        "usernamePh": "username",
+        "passwordPh": "password"
     }
 }
