--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -32,5 +32,6 @@
         "isAlphanumeric": "поле {{field}} должно содержать только допустимые символы",
         "isLength": "для поля {{field}} минимальное количество символов -  {{min}}, максимальное - {{max}}",
         "notMatch": "{{field1}} не совпадает с {{field2}}"
-    }
+    },
+    "bookSectionLabel": "Лучшие мнения:"
 }
