--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -11,7 +11,8 @@
     "inputBlock": {
         "title": "Поделись мнением!",
         "description": "О книге",
-        "bookAdvice": "выберите книгу"
+        "bookAdvice": "выберите книгу",
+        "nonAuthorized": "Необходима авторизация"
     },
     "loginForm": {
         "usernamePh": "имя пользователя",
@@ -37,6 +38,9 @@
         "isAlphanumeric": "поле {{field}} должно содержать только допустимые символы",
         "isLength": "для поля {{field}} минимальное количество символов -  {{min}}, максимальное - {{max}}",
         "notMatch": "{{field1}} не совпадает с {{field2}}"
+    },
+    "notifications": {
+        "articleAdded": "Рецензия успешно добавлена"
     },
     "bookSectionLabel": "Лучшие мнения:"
 }
